src/test/ui/resolve/issue-18252.stderr
error[E0423]: expected function, found struct variant `Foo::Variant`
  --> $DIR/issue-18252.rs:16:13
   |
16 |     let f = Foo::Variant(42);
   |             ^^^^^^^^^^^^ did you mean `Foo::Variant { /* fields */ }`?

error: aborting due to previous error

